--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+button {
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button:hover,
+button:focus {
+  transform: scale(1.2);
+  transition: ease-in-out 0.1s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p:hover,
+p:focus {
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: ease-in-out 0.1s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  border: none;
+  border-bottom: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  text-align: center;
+  max-width: 600px;
+  margin: 3rem auto;
+  padding: 0 50px;
+}
+
+header {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 50px;
+}
+
+.todo {
+  display: flex;
+  justify-content: center;
+}
+
+.todo-item {
+  text-decoration: none;
+}
+
+.complete {
+  text-decoration: line-through;
+}
+
+.todo :last-child {
+  margin-left: 2rem;
+  color: #bf616a;
 }
